[package]
name = "keypad-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
hidapi = { version = "2.4.1", default-features = false, features = [
  "linux-static-libusb",
] }
usbd-hid = "0.7.0"
